# systeml

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  flake.nix
crates/systeml/: Cargo.toml
crates/systeml-bus/: Cargo.toml
crates/systeml-bus/src/: events.rs  lib.rs  manager_iface.rs  mock.rs  service_iface.rs  stub_ifaces.rs  unit_iface.rs
crates/systeml-bus/tests/: bus_roundtrip.rs
crates/systeml-deps/: Cargo.toml
crates/systeml-deps/src/: graph.rs  job.rs  lib.rs  transaction.rs
crates/systeml-journal/: Cargo.toml
crates/systeml-journal/src/: main.rs
crates/systeml-runtime/: Cargo.toml
crates/systeml-runtime/src/: install.rs  lib.rs  manager.rs  state.rs
crates/systeml-runtime/src/exec/: mod.rs
crates/systeml-runtime/src/path/: kqueue.rs  mod.rs
crates/systeml-runtime/src/service/: mod.rs  notify.rs  pid_file.rs  runner.rs  supervise.rs
crates/systeml-runtime/src/socket/: fdpass.rs  listen.rs  mod.rs
crates/systeml-runtime/src/timer/: firing.rs  mod.rs  schedule.rs
crates/systeml-runtime/tests/: integration.rs
crates/systeml-unit/: Cargo.toml
crates/systeml-unit/src/: calendar.rs  condition.rs  deps.rs  duration.rs  env.rs  error.rs  exec.rs  ini.rs  install.rs  lib.rs  linux_only.rs  load.rs  name.rs  path_unit.rs  schedule.rs  search.rs  service.rs  socket.rs  spec.rs  target.rs  timer.rs
crates/systeml/src/: main.rs
crates/systemlctl/: Cargo.toml
crates/systemlctl/src/: main.rs
nix/: home-manager-module.nix  package.nix  sd-switch-shim.nix
