[workspace]
resolver = "2"
members = [
    "crates/systeml-unit",
    "crates/systeml-deps",
    "crates/systeml-runtime",
    "crates/systeml-bus",
    "crates/systeml",
    "crates/systemlctl",
    "crates/systeml-journal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["jm <jm@memorici.de>"]
license = "MIT"
repository = "https://github.com/memorici-de/systeml"
rust-version = "1.78"

[workspace.dependencies]
# Internal crates
systeml-unit    = { path = "crates/systeml-unit",    version = "0.1.0" }
systeml-deps    = { path = "crates/systeml-deps",    version = "0.1.0" }
systeml-runtime = { path = "crates/systeml-runtime", version = "0.1.0" }
systeml-bus     = { path = "crates/systeml-bus",     version = "0.1.0" }
systeml-journal = { path = "crates/systeml-journal", version = "0.1.0" }

# Async runtime
tokio       = { version = "1.40", features = ["full"] }
tokio-util  = { version = "0.7" }
futures     = "0.3"
async-trait = "0.1"

# Errors / logging
anyhow             = "1.0"
thiserror          = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# D-Bus
zbus = { version = "4.4", default-features = false, features = ["tokio"] }
zvariant = "4.2"

# CLI / config
clap   = { version = "4.5", features = ["derive"] }
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Misc
indexmap = "2.5"
bitflags = "2.6"
regex    = "1.10"
time     = { version = "0.3", features = ["macros", "formatting", "parsing", "local-offset"] }
walkdir  = "2.5"
dirs     = "5.0"
nix      = { version = "0.29", features = ["fs", "process", "signal", "user", "socket", "term", "ioctl"] }
libc     = "0.2"
tempfile = "3.10"
once_cell = "1.19"

# macOS-specific FS event sources
kqueue = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[workspace.lints.rust]
unsafe_code      = "deny"
# missing_docs is wishful — `#[zbus::interface]` generates undocumented items
# we can't annotate. Re-enable when we replace the macro or zbus fixes hygiene.
missing_docs     = "allow"
unused_must_use  = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all   = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Documentation-style lints are noisy without docs everywhere yet.
missing_docs_in_private_items = "allow"
multiple_crate_versions       = "allow"
cargo_common_metadata         = "allow"
# Pedantic ones we accept.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
# Unit ASTs are large by design — boxing every variant is a worse trade.
large_enum_variant      = "allow"
# Lots of small `for` loops over chars match systemd patterns.
while_let_on_iterator   = "allow"
