[package]
name = "systeml-deps"
description = "Dependency graph and transaction/job engine for SystemL."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
systeml-unit = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
indexmap     = { workspace = true }
once_cell    = { workspace = true }

[lints]
workspace = true
