[package]
name = "systeml"
description = "SystemL daemon — user-mode systemd-compatible service manager for macOS."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "systeml"
path = "src/main.rs"

[dependencies]
systeml-unit    = { workspace = true }
systeml-deps    = { workspace = true }
systeml-runtime = { workspace = true }
systeml-bus     = { workspace = true }
tokio              = { workspace = true, features = ["full", "signal"] }
futures            = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
nix                = { workspace = true }
libc               = { workspace = true }
once_cell          = { workspace = true }
dirs               = { workspace = true }

[lints]
workspace = true
