[package]
name = "systemlctl"
description = "systemctl-compatible CLI client for SystemL."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "systemlctl"
path = "src/main.rs"

[dependencies]
systeml-unit = { workspace = true }
zbus               = { workspace = true, features = ["p2p"] }
zvariant           = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
dirs               = { workspace = true }
once_cell          = { workspace = true }
nix                = { workspace = true }

[lints]
workspace = true
